# Scaler-RL-

./: Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
clause_bank/: commercial_lease.json  freelancer.json  saas_vendor.json
server/: Dockerfile  app.py  contract_generator.py  counterparty.py  environment.py  grader.py  requirements.txt
tests/: test_contract_generator.py  test_counterparty.py  test_environment.py  test_grader.py  test_models.py
